fix: harden 1.21.1 chain actions and networking