@@ -4,48 +4,66 @@ import net.minecraft.resources.ResourceLocation;
 import org.xiyu.onekeyminer.OneKeyMiner;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * Registry for built-in and addon-provided chain shapes.
+ *
+ * <p>Writers publish immutable snapshots under one lock; readers never observe a
+ * map/order update halfway through.</p>
  */
 public final class ShapeRegistry {
-    private static final Map<ResourceLocation, ChainShape> SHAPES = new ConcurrentHashMap<>();
-    private static final List<ResourceLocation> SHAPE_ORDER = Collections.synchronizedList(new ArrayList<>());
+    private static final Object WRITE_LOCK = new Object();
+    private static volatile Snapshot snapshot = new Snapshot(Map.of(), List.of());
 
-    public static final ResourceLocation DEFAULT_SHAPE_ID = ResourceLocation.fromNamespaceAndPath(OneKeyMiner.MOD_ID, "amorphous");
+    private record Snapshot(
+            Map<ResourceLocation, ChainShape> shapes,
+            List<ResourceLocation> order
+    ) {
+    }
+
+    public static final ResourceLocation DEFAULT_SHAPE_ID =
+            ResourceLocation.fromNamespaceAndPath(OneKeyMiner.MOD_ID, "amorphous");
 
     private ShapeRegistry() {
     }
 
     public static void register(ChainShape shape) {
         Objects.requireNonNull(shape, "Shape must not be null");
-        Objects.requireNonNull(shape.getId(), "Shape ID must not be null");
+        ResourceLocation id = Objects.requireNonNull(shape.getId(), "Shape ID must not be null");
 
-        ResourceLocation id = shape.getId();
-        if (!SHAPES.containsKey(id)) {
-            SHAPE_ORDER.add(id);
-        } else {
-            OneKeyMiner.LOGGER.warn("Shape {} was registered more than once; replacing previous instance", id);
+        synchronized (WRITE_LOCK) {
+            Snapshot current = snapshot;
+            Map<ResourceLocation, ChainShape> nextShapes = new LinkedHashMap<>(current.shapes());
+            List<ResourceLocation> nextOrder = new ArrayList<>(current.order());
+            if (!nextShapes.containsKey(id)) {
+                nextOrder.add(id);
+            } else {
+                OneKeyMiner.LOGGER.warn(
+                        "Shape {} was registered more than once; replacing previous instance",
+                        id
+                );
+            }
+            nextShapes.put(id, shape);
+            snapshot = new Snapshot(Map.copyOf(nextShapes), List.copyOf(nextOrder));
         }
-        SHAPES.put(id, shape);
     }
 
     public static ChainShape getShape(ResourceLocation id) {
-        return SHAPES.get(id);
+        return snapshot.shapes().get(id);
     }
 
     public static ChainShape getShapeOrDefault(ResourceLocation id) {
-        ChainShape shape = SHAPES.get(id);
+        Snapshot current = snapshot;
+        ChainShape shape = current.shapes().get(id);
         if (shape == null) {
-            shape = SHAPES.get(DEFAULT_SHAPE_ID);
+            shape = current.shapes().get(DEFAULT_SHAPE_ID);
         }
-        if (shape == null && !SHAPES.isEmpty()) {
-            shape = SHAPES.values().iterator().next();
+        if (shape == null && !current.order().isEmpty()) {
+            shape = current.shapes().get(current.order().getFirst());
         }
         return shape;
     }
@@ -56,35 +74,36 @@ public final class ShapeRegistry {
     }
 
     public static boolean isRegistered(ResourceLocation id) {
-        return SHAPES.containsKey(id);
+        return snapshot.shapes().containsKey(id);
     }
 
     public static boolean isValidShapeId(String idStr) {
         ResourceLocation id = ResourceLocation.tryParse(idStr);
-        return id != null && SHAPES.containsKey(id);
+        return id != null && isRegistered(id);
     }
 
     public static List<ChainShape> getAllShapes() {
+        Snapshot current = snapshot;
         List<ChainShape> result = new ArrayList<>();
-        for (ResourceLocation id : SHAPE_ORDER) {
-            ChainShape shape = SHAPES.get(id);
+        for (ResourceLocation id : current.order()) {
+            ChainShape shape = current.shapes().get(id);
             if (shape != null) {
                 result.add(shape);
             }
         }
-        return Collections.unmodifiableList(result);
+        return List.copyOf(result);
     }
 
     public static List<ResourceLocation> getAllShapeIds() {
-        return Collections.unmodifiableList(new ArrayList<>(SHAPE_ORDER));
+        return snapshot.order();
     }
 
     public static int getShapeCount() {
-        return SHAPES.size();
+        return snapshot.shapes().size();
     }
 
     public static String getNextShapeId(String currentId) {
-        List<ResourceLocation> ids = getAllShapeIds();
+        List<ResourceLocation> ids = snapshot.order();
         if (ids.isEmpty()) {
             return DEFAULT_SHAPE_ID.toString();
         }
